2006-06-15  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/comm/convcode.h, itpp/comm/convcode.cpp: Fixed bug
	[1506524]. The `K' variable is now initialised in the
	Convolutional_Code default constructor. Thanks to Hakan Eriksson
	for finding this bug.

2006-06-01  Adam Piatyszek  <ediap@users.sourceforge.net>

	* doc/local/index.doc.in: Cosmetic changes in page layout.

2006-05-31  Adam Piatyszek  <ediap@users.sourceforge.net>

	* tests/gf2mat_test.cpp: Missing initialisation added.

2006-05-21  Adam Piatyszek  <ediap@users.sourceforge.net>

	* AUTHORS, doc/local/authors.doc, itpp/comm/bch.cpp,
	itpp/comm/bch.h, itpp/comm/reedsolomon.cpp,
	itpp/comm/reedsolomon.h, tests/bch_test.cpp,
	tests/reedsolomon_test.cpp:
	Added Steve Peters as a co-author of the BCH and Reed_Solomon
	classes. BTW, updated IT++ authors list.
	
	* tests/reedsolomon_test.cpp, tests/reedsolomon_test.ref,
	itpp/comm/reedsolomon.cpp, itpp/comm/reedsolomon.h,
	tests/Makefile.am:
	Added systematic option to the Reed_Solomon class, which produces
	codewords in a systematic form. BTW, added a missing test program.
	Thanks to Steve, aka "michboy",	for providing patches and en
	example test file.

	* itpp/comm/bch.cpp, itpp/comm/bch.h, tests/bch_test.cpp,
	tests/bch_test.ref:
	BCH related patches from Feature Request [1418250] applied. Now,
	BCH encoder/decoder class can be set to produce codewords in a
	systematic order. Thanks to Steve, aka "michboy", for providing
	patches and a simple test file.

2006-05-19  Adam Piatyszek  <ediap@users.sourceforge.net>

	* tests/timer_test.cpp: Minor fix to avoid a hazard in timing test.

	* configure.ac, itpp/base/binfile.cpp, itpp/config_msvc.h:
	Removed checks for <sys/stat.h>. Now using iostream based method
	for checking if a file exists.

	* itpp/srccode/audiofile.cpp, itpp/srccode/audiofile.h,
	itpp/srccode/sources.mk:
	Added templated read_endian and write_endian functions, which
	replaced the old macro based read/write ones. Finally removed